force-app/main/default/objects/FS_Market_ID__c/FS_Market_ID__c.object-meta.xml
<CustomObject>
    <label>Market ID</label>
    <nameField>
        <displayFormat>MI-{0000}</displayFormat>
        <label>Market ID Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Market IDs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>