force-app/main/default/objects/FS_Market_ID__c/fields/FS_KO_ID__c.field-meta.xml
<CustomField>
    <fullName>FS_KO_ID__c</fullName>
    <label>KO-ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>