force-app/main/default/objects/FS_Market_ID__c/fields/FS_Market_ID_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Market_ID_Name__c</fullName>
    <description>Name of the market ID from SAP P07 YMDM_ACN table</description>
    <label>SAP Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>