force-app/main/default/objects/FS_Market_ID__c/fields/FS_Market_ID_Value__c.field-meta.xml
<CustomField>
    <fullName>FS_Market_ID_Value__c</fullName>
    <externalId>true</externalId>
    <label>Market ID</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>