force-app/main/default/objects/FS_Market_ID__c/fields/FS_Parent_ID_Value__c.field-meta.xml
<CustomField>
    <fullName>FS_Parent_ID_Value__c</fullName>
    <label>Parent ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>