force-app/main/default/objects/FS_Market_ID__c/fields/FS_User__c.field-meta.xml
<CustomField>
    <fullName>FS_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Market_IDs</relationshipName>
    <type>Lookup</type>
</CustomField>