force-app/main/default/objects/FS_Market_ID__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>FS_KO_ID__c</columns>
    <columns>FS_Market_ID_Value__c</columns>
    <columns>FS_Parent_ID_Value__c</columns>
    <columns>FS_User__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>