force-app/main/default/objects/FS_Market_ID__c/listViews/My_Market_ID_s.listView-meta.xml
<ListView>
    <fullName>My_Market_ID_s</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Market ID&#39;s</label>
</ListView>